--- a/site.html
+++ b/site.html
@@ -4,13 +4,22 @@
     <meta charset="utf-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="bootstrap-4.1.3/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="css/style.css" type='text/css'>
+
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Roboto+Slab:400,700|Slabo+27px" rel="stylesheet">
   </head>
 
   <body>
 
   	<div class="contianer-fluid">
   		<h1> Conches </h1>
-  		<p> testing 123 </p>
+
+  		<h2> Link 1 </h2>
+  		<h2> Link 2 </h2>
+  		<h2> Link 3 </h2>
+  		<h2> Link 4 </h2>
+  		
+
   	</div>
   </body>
 
